# parmetis3.2

./: CMakeLists.txt
METISLib/: CMakeLists.txt  metis.h
ParMETISLib/: CMakeLists.txt
